# nikmon

./: CMakeLists.txt
cmake/: CompilerOptions.cmake  Packaging.cmake  ProjectDependencies.cmake
conf/: server.config
docs/: TODO_List.md  requests-examples.md
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h  Router.cpp  Router.h  ServiceLocator.cpp
src/controllers/: AgentCommunicatorController.cpp  AgentCommunicatorController.h  AgentsController.cpp  AgentsController.h  Controller.cpp  Controller.h  ControllerAdapter.cpp  ControllerAdapter.h  TasksController.cpp  TasksController.h
src/core/: Agent.cpp  Agent.h  ConfigurationManager.cpp  ConfigurationManager.h  IAgentCommunicator.h  IAgentsManager.h  IDatabaseManager.h  ITasksManager.h  SQLiteDatabaseManager.cpp  SQLiteDatabaseManager.h  Task.h  TasksManager.cpp  TasksManager.h  WorkflowManager.cpp  WorkflowManager.h
src/core/database/: IDatabaseManager.h  SQLiteDatabaseManager.cpp  SQLiteDatabaseManager.h
src/core/database/repositories/: IAgentsRepository.h  ITasksItemsErrorsRepository.h  ITasksItemsRepository.h  ITasksRepository.h  SQLiteAgentsRepository.cpp  SQLiteAgentsRepository.h  SQLiteTasksItemsErrorsRepository.cpp  SQLiteTasksItemsErrorsRepository.h  SQLiteTasksItemsRepository.h  SQLiteTasksRepository.cpp  SQLiteTasksRepository.h
src/core/database/repositories/sqlite/: SQLiteAgentsRepository.cpp  SQLiteAgentsRepository.h  SQLiteTasksItemsErrorsRepository.h  SQLiteTasksItemsRepository.h  SQLiteTasksRepository.cpp  SQLiteTasksRepository.h
src/core/database/types/: AgentDB.h  TaskDB.h  TaskItemDB.h  TaskItemErrorDB.h
src/types/: Agent.cpp  Agent.h  Command.cpp  Command.h  CommandConfirmation.h  EditTask.h  RegistrationRequest.h  RegistrationResponse.h  StatusRequest.h  StatusResponse.h  Task.cpp  Task.h  TaskItem.h
src/types/agent-communication/: Command.h  CommandConfirmation.h  RegistrationRequest.h  RegistrationResponse.h  StatusRequest.cpp  StatusRequest.h  StatusResponse.cpp  StatusResponse.h  TaskItem.h
src/types/enums/: AgentStatus.h  TaskAction.h  TaskState.h  TaskStatus.h  TaskValueType.h
src/types/rest-api/: AgentInfo.h  AgentShortInfo.h  EditAgent.cpp  EditAgent.h  EditTask.cpp  EditTask.h  TaskErrorItem.h  TaskInfo.h  TaskResultItem.h  TaskShortInfo.h
src/unit-tests/: CMakeLists.txt  Config.cpp  Config.h  UnittestSQLiteAgentsRepository.cpp  UnittestSQLiteTasksRepository.cpp  Utils.cpp  Utils.h  main.cpp
src/unit-tests/resources/: empty-database.db
src/unit-tests/tests/: UnittestSQLiteAgentsRepository.cpp  UnittestSQLiteTasksItemsErrorsRepository.cpp  UnittestSQLiteTasksItemsRepository.cpp  UnittestSQLiteTasksRepository.cpp
src/utils/: Utils.cpp  Utils.h
